--- a/quiz/templates/question.html
+++ b/quiz/templates/question.html
@@ -52,31 +52,36 @@
   <small class="muted">{% trans "Question category" %}:</small>
   <strong>{{ question.category }}</strong>
 </p>
+<div class="container">
+	<div class="row">
+		<div class="col-3">
+		<p class="lead">{{ question.content }}</p>
+		</div>
+		{% if question.figure %}
+			<div class="col-sm">
+				<img src="{{ question.figure.url }}" width="400px" alt="{{ question.content }}" />
+			</div>
+		{% endif %}
+		<div class="col-sm">
+			<form action="" method="POST">{% csrf_token %}
+			<input type=hidden name="question_id" value="{{ question.id }}">
 
-<p class="lead">{{ question.content }}</p>
+			<ul class="list-group">
 
-{% if question.figure %}
-    <img src="{{ question.figure.url }}" alt="{{ question.content }}" />
-{% endif %}
-
-<form action="" method="POST">{% csrf_token %}
-  <input type=hidden name="question_id" value="{{ question.id }}">
-
-  <ul class="list-group">
-
-	{% for answer in form.answers %}
-	  <li class="list-group-item">
-	    {{ answer }}
-	  </li>
-	{% endfor %}
-
-  </ul>
-  <input type="submit" value={% trans "Check" %} class="btn btn-large btn-block btn-warning" >
-</form>
-
-{% endif %}
-
-<hr>
-
+				{% for answer in form.answers %}
+				<li class="list-group-item">
+					{{ answer }}
+				</li>
+				{% endfor %}
+				<li class="list-group-item">
+					{{ form.answer_title }}
+				</li>
+			</ul>
+			<input type="submit" value={% trans "Answer" %} class="btn btn-large btn-block btn-primary" >
+			</form>
+		</div>
+		{% endif %}
+	</div>
+</div>
 
 {% endblock %}
