--- a/quiz/templates/quiz/quiz_detail.html
+++ b/quiz/templates/quiz/quiz_detail.html
@@ -8,12 +8,12 @@
 <h2>{{ quiz.title }}</h2>
 <h3>{% trans "Category" %}: {{ quiz.category }}</h3>
 {% if quiz.single_attempt %}
-  <h4>{% trans "You will only get one attempt at this quiz" %}.</h4>
+  <h4>{% trans "You can only enter answers once... <b>YOU CAN'T GO BACK!</b>" %}</h4>
 {% endif %}
 <p>{{ quiz.description }}</p>
 <p>
-  <a href="{% url 'quiz_question' quiz_name=quiz.url %}">
-	{% trans "Start quiz" %}
+  <a href="{% url 'quiz_question' quiz_name=quiz.url %}" class="btn btn-danger btn-block">
+	Start {{ quiz.title }}
   </a>
 </p>
 {% endblock %}
