--- a/quiz/templates/single_complete.html
+++ b/quiz/templates/single_complete.html
@@ -10,7 +10,7 @@
 
 
 {% if user.is_authenticated %}
-  <p>{% trans "You have already sat this exam and only one sitting is permitted" %}.</p>
+  <p>Nice Try... You can only have one go at this!</p>
 {% else %}
   <p>{% trans "This exam is only accessible to signed in users" %}.</p>
 {% endif %}
